// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RedisCursor > async iterator > iterates over all items in order 1`] = `
[
  {
    "id": 1,
    "name": "item-1",
  },
  {
    "id": 2,
    "name": "item-2",
  },
  {
    "id": 3,
    "name": "item-3",
  },
  {
    "id": 4,
    "name": "item-4",
  },
]
`;

exports[`RedisCursor > next() > returns items in order 1`] = `
[
  {
    "id": 1,
    "name": "item-1",
  },
  {
    "id": 2,
    "name": "item-2",
  },
  {
    "id": 3,
    "name": "item-3",
  },
]
`;

exports[`RedisCursor > nextBatch() > advances position across calls 1`] = `
{
  "first": [
    {
      "id": 1,
      "name": "item-1",
    },
    {
      "id": 2,
      "name": "item-2",
    },
  ],
  "second": [
    {
      "id": 3,
      "name": "item-3",
    },
    {
      "id": 4,
      "name": "item-4",
    },
  ],
  "third": [
    {
      "id": 5,
      "name": "item-5",
    },
    {
      "id": 6,
      "name": "item-6",
    },
  ],
}
`;

exports[`RedisCursor > nextBatch() > returns a batch of the given size 1`] = `
[
  {
    "id": 1,
    "name": "item-1",
  },
  {
    "id": 2,
    "name": "item-2",
  },
  {
    "id": 3,
    "name": "item-3",
  },
]
`;

exports[`RedisCursor > nextBatch() > returns remaining items when fewer than batch size remain 1`] = `
[
  {
    "id": 1,
    "name": "item-1",
  },
  {
    "id": 2,
    "name": "item-2",
  },
]
`;
